feat: create layout

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -66,6 +66,7 @@
     "react/jsx-props-no-spreading": "warn",
     // Sometimes works bad with prettier printWidth
     "implicit-arrow-linebreak": "off",
+    "react/prop-types": "off",
 
     "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
     "import/extensions": [
