--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.1.3",
     "mobx": "^6.6.2",
     "mobx-react-lite": "^3.4.0",
+    "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
